feat: REST patch relation tuples The new PATCH handler allows transactional changes similar to the already existing gRPC service.
